Agregado código para listar productos
Agregado código para pasar el test y listar productos de forma paginada